@@ -10,13 +10,6 @@ Priority 1
 Priority 2
 ----------
 
-- Look into replacing the manual patches by a general approach based on the
-  zope.testing.cleanup registry. We probably need to omit some of the
-  functions in there from Zope itself (like the ones in Five), though.
-  collective.transmogrifier is a good test case that is currently not
-  supported and would need an explicit patch, but should work fine with the
-  more general approach.
-
 - Figure out a way to support decorated methods. We might be able to have a
   registry of 'patches' that change some of the most common decorators to not
   only override the original function, but also store it on the class. That
