@@ -1,9 +1,33 @@
 from zope.app.component.hooks import setSite
 from zope.component import getGlobalSiteManager
+from zope.testing import cleanup
 
 from Products.Five import zcml
 
-from plone.reload import PATCHES
+CORE_CLEANUPS = frozenset([
+    'zope.app.apidoc.classregistry',
+    'zope.app.component.hooks',
+    'zope.app.security.principalregistry',
+    'zope.app.schema.vocabulary',
+    'zope.component.globalregistry',
+    'zope.schema.vocabulary',
+    'zope.security.management',
+    'zope.security.checker',
+    'Products.Five.zcml',
+    'Products.Five.eventconfigure',
+    'Products.Five.fiveconfigure',
+    'Products.Five.site.metaconfigure',
+    'Products.Five.sizeconfigure',
+])
+
+
+def cleanups():
+    registered = [c[0] for c in cleanup._cleanups]
+    functions = []
+    for r in registered:
+        if r.__module__ not in CORE_CLEANUPS:
+            functions.append(r)
+    return functions
 
 
 def reload_zcml():
@@ -12,11 +36,9 @@ def reload_zcml():
     try:
         setSite(None)
         gsm.__init__(gsm.__name__)
-        # Apply patches
-        global PATCHES
-        for patch in PATCHES:
-            patch()
-
+        # Clean up
+        for clean in cleanups():
+            clean()
         # Reload all ZCML
         zcml._initialized = False
         zcml._context._seen_files.clear()
